fix horizontal scroll

--- a/kattendroom.css
+++ b/kattendroom.css
@@ -1,3 +1,8 @@
+body {
+    overflow-x:hidden;
+}
+
+
 /*This is header + navbar styling for Mobile*/
 
 .navbar {
